# micky_vision

./: README.md  package.xml  requirements.txt  setup.cfg
launch/: rs_vision.launch.py  usb_vision.launch.py
micky_recognition/: package.xml  setup.cfg  setup.py
micky_recognition/config/: yolov8_tools_recognition.yaml
micky_recognition/config/rviz/: reference.rviz
micky_recognition/launch/: tools_recognition.launch.py
micky_recognition/micky_recognition/base_recognition/: base_recognition.py
micky_recognition/micky_recognition/tools_recognition/: __init__.py  tools_recognition.py
micky_vision_msgs/: CMakeLists.txt  package.xml
