<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>micky_recognition</name>
  <version>0.0.0</version>
  <description>ROS2 package for tools recognition using YOLOv8 computer vision model</description>
  <maintainer email="gabrieltlt721@gmail.com">Gabriel Torres</maintainer>
  <license>MIT</license>

  <!-- Python dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>python3-opencv</depend>
  
  <!-- Build dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>